--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>for ( SANZ )</title>
+<title>for ( ZAINI )</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -61,6 +61,9 @@ video {
             <span id="hours">00</span> <span class="label">Hours</span> &nbsp;
             <span id="minutes">00</span> <span class="label">Minutes</span> &nbsp;
             <span id="seconds">00</span> <span class="label">Seconds</span>
+          <div class="w3-small w3-animate-top"> Zainab you're special to me, maybe i didn't have courage to pretend
+
+          </h1>
         </div>
         </div>
       </div>
@@ -73,7 +76,7 @@ vid.volume = 0.1;
 </script>
 <script>
   // Event date and time
-  const eventDate = new Date("August 31, 2024 16:57:00").getTime();
+  const eventDate = new Date("September 16, 2024 16:57:00").getTime();
 
   function updateTimer() {
       const now = new Date().getTime();
